--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
    <title>KaggleX Project Showcase</title>
-   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <div class="content">
-        <h1 style="color: rgb(6, 6, 6); font-size: 40px;">Streamlining Life Insurance Applications with Predictive Modeling</h1>
+        <h1 style="color: rgb(0, 0, 0); font-size: 40px;">Streamlining Life Insurance Applications with Predictive Modeling</h1>
         <hr>
         <div style="text-align: left; color: rgb(35, 94, 12); font-size: 28px;">
             <h4><b>Objective:</b></h4>
